--- a/src/Ombi/ClientApp/src/styles/material-overrides.scss
+++ b/src/Ombi/ClientApp/src/styles/material-overrides.scss
@@ -38,24 +38,6 @@ td.mat-cell {
 
 //Login Screen CSS
 
-.login-card{
-    background-color: rgba(0,0,0,0.6);
-}
-
-.login-card H1.login_logo{
-    display:flex;
-    font-family: Montserrat,sans-serif;
-    text-transform: uppercase;
-    color:$ombi-active;
-    align-items: center;
-    justify-content: center;
-    font-weight: 700;
-    font-size: 10em;
-    width:100%;
-    padding:40px;
-    margin-bottom:50px;
-}
-
 .login-buttons button{
     margin:1em;
     &#sign-in{
